# haskell-palette

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  build_demo_frontend.sh  elm.json  haskell-palette.cabal  index.html  run_dev_backend.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yaml
app/: Main.hs
demo-frontend/: Components.elm  Main.elm  Types.elm  Utils.elm
deploy/: Dockerfile  start.sh
frontend/: Makefile  build_dev_frontend.sh  elm.json
frontend/src/: Components.elm  Main.elm  Types.elm  Utils.elm
src/: Color.hs  CommonTypes.hs  Image.hs  Model.hs  Server.hs  ServerLib.hs  Util.hs
