cabal-version:      2.4
name:               haskell-palette
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Mieszko Sabo
maintainer:         mieszko.mac@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules:  MyLib

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.1.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable haskell-palette
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.1.0,
        scotty ^>=0.12,
        wai-extra ^>=3.1.12.1,
        text ^>=1.2.5.0,
        haskell-palette

    hs-source-dirs:   app
    default-language: Haskell2010
