cabal-version:      2.4
name:               haskell-palette
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Mieszko Sabo
maintainer:         mieszko.mac@gmail.com

common shared-properties
    default-language: Haskell2010
    build-depends:
        base >=4 && < 5,
    ghc-options:
        -eventlog
        -O2
        -fmax-simplifier-iterations=20
        -fsimplifier-phases=3
        -fno-liberate-case
        -funfolding-use-threshold100
        -fllvm
        -optlo-O3

library
    import: shared-properties
    exposed-modules: Server, Model, Util, Image, Color

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        parallel ^>= 3.2.2.0,
        repa ^>= 3.4.1.5,
        JuicyPixels ^>= 3.3.7,
        JuicyPixels-repa ^>= 0.7.1.0,
        aeson ^>= 2.0.3.0,
        scotty ^>=0.12,
        wai-extra ^>=3.1.12.1,
        text ^>=1.2.5.0,
        bytestring ^>= 0.11.3.1,
        base64-bytestring ^>= 1.2.1.0,
        either ^>= 5.0.2,
        containers ^>= 0.6.5.1,
        mtl ^>= 2.2.2,
        vector ^>= 0.12.3.1,
        vector-th-unbox ^>= 0.2.2,
        vector-algorithms ^>= 0.8.0.4,
        random ^>= 1.2.1.1
    hs-source-dirs:   src

executable haskell-palette
    import: shared-properties
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        haskell-palette

    ghc-options:
        -rtsopts
        -threaded
        -with-rtsopts=-N

    hs-source-dirs:   app
